# synthesis

./: .dockerignore  .gitattributes  .gitignore  CMakeLists.txt  Dockerfile  README-artifact.md  README.md  alias-paynt.sh  alias-storm.sh  build-requirements.txt  drn_parametric_to_interval.py  execute.sh  experiment.sh  experiments-dts.py  experiments.py  experiments.sh  export2drn.sh  export_results.py  gridGeneratedTransactions.txt  gridGenerator.py  install.sh  output_1.jani  paynt-learner.dockerfile  paynt-specific-storm.dockerfile  paynt.py  paynt_pomdp_sketch.py  pomdp-family-experiments.py  posmg-experiments.py  pyproject.toml  pytest.ini  re_build.sh  recompile.sh  saynt_new_beliefs.py  setup.py  smg_rewards.py  storm-alias.sh  sub-pomdp-builder-usage.py  synthesis.dockerfile
.github/workflows/: Dockerfile.fetch  Dockerfile.release  Dockerfile.stable  before-all-linux.sh  before-all-macos.sh  buildtest.yml  create_wheel.yml  release_docker.yml  tag.yml  test_wheelpypi.yml  wheelpypi.yml
artifact/: LICENSE  install_carl.sh  install_dependencies.sh  install_storm.sh  make_local_copy.sh
cav21-benchmark/: evaluate.md
cav21-benchmark/dpm/: hard.properties  sketch.templ
cav21-benchmark/dpm-demo/: sketch.properties  sketch.templ
cav21-benchmark/herman/: easy.properties  sketch.templ
cav21-benchmark/maze/: easy.properties
dynasty/: .gitignore  Makefile  README.md  TUTORIAL.md  bench.py  check_model.py  compile.sh  dynasty.py  execute.sh  makefile  setup.py
dynasty/dynasty/: cli.py  sketch.py  (+2 more)
experiment-models/: 2generals.dpomdp  Mars.dpomdp  alignment_2x4.dpomdp  broadcastChannel.dpomdp  dectiger.dpomdp  prisoners.dpomdp
experiments/: README_evaluation.md  evaluate.md  experiment.sh  experiment_evaluate.sh  experiment_evaluate_quick.sh  experiment_run.sh  experiment_summary.sh  experiments.sh  parse_log.py  summary-5m.txt  summary.txt  summary_quick.txt
experiments-beliefs/: experiments.py  get-graphs.py
learning/: paynt-learner.dockerfile
models/: .gitignore
outputs/: Grid3x3corners.dpomdp.txt  Mars.dpomdp.txt  boxPushing.dpomdp.txt  dectiger.dpomdp.txt  recycling.dpomdp.txt
paynt/: .gitignore  .travis.yml  CMakeLists.txt  __init__.py  api.py  cli.py  examples.py  paynt.py  setup.py
payntbind/: .gitignore  CMakeLists.txt  README.md  setup.py
payntbind/cmake/: config.py.in  macros.cmake
payntbind/lib/payntbind/: __init__.py
payntbind/lib/payntbind/info/: __init__.py
payntbind/lib/payntbind/synthesis/: __init__.py
payntbind/setup/: config.py  helper.py
payntbind/src/: mod_info.cpp  mod_synthesis.cpp
payntbind/src/synthesis/: helpers.cpp  synthesis.cpp  synthesis.h
payntbind/src/synthesis/counterexamples/: Counterexample.cpp  CounterexampleMdp.cpp  bindings.cpp
payntbind/src/synthesis/decpomdp/: DecPomdp.cpp  DecPomdp.h  bindings.cpp
payntbind/src/synthesis/decpomdp/madp/: COPYING
payntbind/src/synthesis/decpomdp/madp/src/parser/: ParserPOMDPFormat_Spirit.h
payntbind/src/synthesis/mdp_family/: MemoryUnfolder.cpp  MemoryUnfolder.h  bindings.cpp
payntbind/src/synthesis/pomdp/: BeliefMCExplorer.cpp  BeliefMCExplorer.h  PomdpManager.cpp  PomdpManager.h  PomdpManagerAposteriori.cpp  PomdpManagerAposteriori.h  SubPomdpBuilder.cpp  SubPomdpBuilder.h  bindings.cpp
payntbind/src/synthesis/pomdp_family/: FscUnfolder.cpp  FscUnfolder.h  GameAbstractionSolver.cpp  GameAbstractionSolver.h  ObservationEvaluator.cpp  ObservationEvaluator.h  ProductPomdpFsc.cpp  ProductPomdpFsc.h  ProductPomdpRandomizedFsc.cpp  ProductPomdpRandomizedFsc.h  SmgAbstraction.cpp  SmgAbstraction.h  bindings.cpp
payntbind/src/synthesis/posmg/: Posmg.cpp  Posmg.h  PosmgManager.cpp  PosmgManager.h  bindings.cpp
payntbind/src/synthesis/quotient/: Coloring.cpp  Coloring.h  ColoringSmt.cpp  ColoringSmt.h  ColoringSmtFull.cpp  ColoringSmtFull.h  Family.cpp  Family.h  JaniChoices.cpp  JaniChoices.h  TreeNode.cpp  TreeNode.h  bindings.cpp
payntbind/src/synthesis/smg/: StochasticGame.cpp  StochasticGame.h  bindings.cpp  smgModelChecker.h
payntbind/src/synthesis/smg/helper/: GameMaximalEndComponentDecomposition.cpp  GameMaximalEndComponentDecomposition.h  SparseNondeterministicGameInfiniteHorizonHelper.cpp  SparseNondeterministicGameInfiniteHorizonHelper.h  SparseSmgRpatlHelper.cpp  SparseSmgRpatlHelper.h
payntbind/src/synthesis/smg/helper/internal/: GmmxxMultiplier.cpp  GmmxxMultiplier.h  LraViHelper.cpp  Multiplier.cpp  NativeMultiplier.cpp  SynthesisMatrix.h
payntbind/src/synthesis/smg/modelchecker/: SparseSmgRpatlModelChecker.cpp  SparseSmgRpatlModelChecker.h
payntbind/src/synthesis/smg/modelchecker/helper/: GameMaximalEndComponentDecomposition.cpp  GameMaximalEndComponentDecomposition.h  SMGModelCheckingHelperReturnType.h  SparseNondeterministicGameInfiniteHorizonHelper.cpp  SparseNondeterministicGameInfiniteHorizonHelper.h  SparseSmgRpatlHelper.cpp  SparseSmgRpatlHelper.h
payntbind/src/synthesis/smg/modelchecker/helper/internal/: GameViHelper.cpp  GameViHelper.h  GmmxxMultiplier.cpp  GmmxxMultiplier.h  LraViHelper.cpp  LraViHelper.h  Multiplier.cpp  Multiplier.h  NativeMultiplier.cpp  NativeMultiplier.h  SynthesisMatrix.cpp  SynthesisMatrix.h
payntbind/src/synthesis/storage/: bindings.cpp
payntbind/src/synthesis/translation/: ItemKeyTranslator.cpp  ItemKeyTranslator.h  ItemTranslator.cpp  ItemTranslator.h  SubPomdpBuilder.cpp  SubPomdpBuilder.h  bindings.cpp  choiceTransformation.cpp  choiceTransformation.h  componentTranslations.cpp  componentTranslations.h
payntbind/src/synthesis/verification/: MdpModelChecker.h
payntbind/tests/helpers/: helper.py
payntbind/tests/smg_modelchecker/: test_smg_modelchecker.py
payntbind/tests/translation/: test_misc.py  test_model_translation.py
payntbind_src/: CMakeLists.txt  __init__.py  pytest.ini
prerequisites/: ._.gitignore  .gitignore
scripts/: outputs.ipynb  run.sh
storm/: .gitignore  CMakeLists.txt  storm-config.h.in
stormpy/: .gitignore  CMakeLists.txt  setup.py
tests/: .coverage  test_api_import.py
workspace/: .gitignore  alias-storm.sh  benchmarking-jan.txt  execute.sh  storm-alias.sh
(+2987 files in other folders)
