[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "paynt"
description = "PAYNT - Probabilistic progrAm sYNThesizer"
readme = "README.md"
license.file = "LICENSE"
dynamic = ["version"]
authors = [
    { name = "R. Andriushchenko", email = "iandri@fit.vut.cz" },
    { name = "F. Macák", email = "imacak@fit.vut.cz" },
]
requires-python = ">=3.10"
dependencies = [
    "stormpy>=1.10.0",
    "z3-solver>=4.14.0.0",
    "click>=8.1.3",
    "psutil>=7.0.0",
    "graphviz>=0.20.1",
]
classifiers = [
    'Intended Audience :: Science/Research',
    'Topic :: Scientific/Engineering',
    'Topic :: Software Development :: Libraries :: Python Modules',
]
keywords = [
    "stormpy", 
    "synthesis", 
    "paynt", 
    "storm",
]

[project.urls]
Homepage = "https://github.com/randriu/synthesis"
"Bug Tracker" = "https://github.com/randriu/synthesis/issues"

[project.optional-dependencies]
numpy = [
    "numpy"
]
plot = [
    "matplotlib",
    "numpy",
    "scipy",
]
dev = [
    # Formatting
    "black[jupyter]",
]
test = [
    "pytest",
    "nbval",
    "numpy",
]

[tool.scikit-build]
cmake.build-type = "Release"
build-dir = "build/{wheel_tag}"
wheel.install-dir = "paynt-install"
cmake.args = [
]
wheel.packages = ["paynt"]

[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.regex"
input = "paynt/_version.py"

[tool.cibuildwheel]
manylinux-x86_64-image = "manylinux_2_34"
skip = "*musllinux*"

[tool.black]
target-version = [
    "py310",
    "py311",
    "py312",
    "py313",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--doctest-glob='*.rst' --nbval"
testpaths = [
    "tests",
    "payntbind/tests",
]
python_files = [
    "test*.py",
]
python_functions = [
    "*_test",
    "test_*",
]